<resources>
    <string name="app_name">Aplikasi</string>
    <string name="booki">Fashion Store</string>
    <string name="welcome_back">Welcome</string>
    <string name="read_it_together">Ready to be a fashionable ?</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCbNPy5hqDEQFNNRXXXXXXXXXXXXXXXXXXX
    </string>

    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>

    <string name="about_text">The best android implementation of material UI components. This app implemented based on
        Google Design Guidelines.
    </string>
    <string name="title_activity_product_detail">ProductDetailAct</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blog">BlogAct</string>
    <string name="title_activity_profile">ProfileAct</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
    <string name="order_history">
        <u>Order History</u>
    </string>

</resources>
